--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,9 +5,16 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app/backend
 
-RUN apt-get update \
-  && apt-get install -y netcat-openbsd gcc postgresql \
-  && apt-get clean
+RUN apt-get update && apt-get install -y \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libgdk-pixbuf2.0-0 \
+    libcairo2 \
+    libgirepository1.0-dev \
+    gobject-introspection \
+    shared-mime-info \
+    netcat-openbsd gcc postgresql \
+    && apt-get clean
 
 COPY requirements.txt ./
 RUN pip install --upgrade pip && pip install -r requirements.txt
@@ -16,4 +23,7 @@ RUN pip install uwsgi
 
 COPY . ./
 
-CMD ["uwsgi", "--http", ":8000", "--module", "backend.wsgi"]
+EXPOSE 8080
+
+WORKDIR /app
+CMD ["uwsgi", "--http", ":8080", "--module", "backend.wsgi:application"]
