--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^17.2.1",
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.3",
     "primeicons": "^6.0.1",
     "primeng": "^17.9.0",
     "quill": "^1.3.7",
