--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
+    "jszip": "^3.10.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.9.0",
     "quill": "^1.3.7",
