--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^17.3.12",
     "@angular/common": "^17.2.1",
     "@angular/compiler": "^17.2.1",
     "@angular/core": "^17.2.1",
@@ -39,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "webpack": "^5.93.0"
   }
 }
