--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
+    "ang-jsoneditor": "^3.1.1",
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
